--- a/addons/fabianlc_custom_play_scene_button/plugin.cfg
+++ b/addons/fabianlc_custom_play_scene_button/plugin.cfg
@@ -2,7 +2,7 @@
 
 name="Custom Play Scene button"
 description="Hides the \"Play Scene\" button and adds a custom button that 
-sets an editor setting to the scene that has to be played.
+sets a project setting to the scene that has to be played.
 
 Useful for games with custom scene loading, I personally use this
 to make sure playing a scene from the editor is the same as loading
